# zero2prod

./: Cargo.toml  Makefile  readme.md
.github/workflows/: general.yml
scripts/: init_db.sh  wait-for-it.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
