[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.216", features = ["derive"] }
config = "0.15.4"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
uuid = { version = "1.11.0", features = ["v4"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.15"
once_cell = "1.20.2"
secrecy = { version = "0.10.3", features = ["serde"] }


[dev-dependencies]
reqwest = "0.12.9"
cargo-udeps = "0.1.53"
once_cell = "1.20.2"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]